k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site
  labels:
    app: site
spec:
  replicas: 2
  selector:
    matchLabels:
      app: site
  template:
    metadata:
      labels:
        app: site
    spec:
      containers:
        - name: site
          image: gcr.io/nobv-io/site-beta-container:latest
          ports:
            - containerPort: 8080
