k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site
spec:
  type: NodePort
  selector:
    app: site
  ports:
    - name: http
      port: 8080
      targetPort: 8080
