k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: site
spec:
  rules:
    -  http:
        paths:
          - path: /*
            backend:
              serviceName: site
              servicePort: 8080
